[package]
name = "yices2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1.0.72"
flate2 = "1.0.27"
tar = "0.4.40"
xz = "0.1.0"

[features]
default = ["clang"]
clang = []
gcc = []
