[workspace.package]
authors = ["Rowan Hart <rowanbhart@gmail.com>"]
description = "Rust bindings for Yices 2 SMT solver"
edition = "2021"
homepage = "https://yices.csl.sri.com"
keywords = ["smt", "smt-solver", "yices"]
license = "GPL"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/yices2-rs"
version = "0.1.0"

[workspace]
members = ["yices2-sys", "yices2"]
default-members = ["yices2-sys", "yices2"]

[workspace.dependencies]
yices2-sys = { path = "yices2-sys" }
yices2 = { path = "yices2" }
