[workspace.package]
authors = ["Rowan Hart <rowanbhart@gmail.com>"]
description = "Rust bindings for Yices 2 SMT solver"
edition = "2021"
homepage = "https://yices.csl.sri.com"
keywords = ["smt", "smt-solver", "yices"]
license = "GPL-3.0"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/yices2-rs"

[workspace]
members = ["yices2-sys", "yices2"]
default-members = ["yices2-sys", "yices2"]

[workspace.dependencies]
yices2-sys = { version = "2.6.4", path = "yices2-sys" }
