[package]
name = "yices2-sys"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1.0.72"
bindgen = "0.66.1"
flate2 = "1.0.27"
num_cpus = "1.16.0"
tar = "0.4.40"
xz = "0.1.0"

[features]
default = ["clang"]
clang = []
gcc = []
