[package]
name = "yices2-sys"
description = "Low level Rust bindings to the Yices 2 SMT solver"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1.0.72"
bindgen = "0.66.1"
flate2 = "1.0.27"
num_cpus = "1.16.0"
tar = "0.4.40"
xz = "0.1.0"

[features]
# By default, use clang to compile libpoly, libgmp, libcudd, and libyices
default = ["clang"]
# Use the generated bindings instead of the included bindings. This can be useful
# when updating to use a newer version of yices2, but should otherwise not be required
# as the yices2 version is locked to the vendored code.
use-generated = []
# Compile libpoly, libgmp, libcudd, and libyices with clang. A CC/CXX environment variable
# defined at build time takes precedence over this option.
clang = []
# Compile libpoly, libgmp, libcudd, and libyices with gcc. A CC/CXX environment variable
# defined at build time takes precedence over this option.
gcc = []
