[package]
name = "yices2"
description = "Rust bindings to the Yices 2 SMT solver"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = { version = "0.2.4", optional = true }
itertools = "0.11.0"
paste = "1.0.14"
thiserror = "1.0.46"
yices2-sys.workspace = true

[features]
default = ["ctor"]
# By default, yices_init will be called at the beginning of the program and yices_exit will be called at the end.
# If you want to call yices_init and yices_exit yourself, you can disable the default feature
# and call Yices::new() yourself in your program (Yices::drop() calls yices_exit).
ctor = ["dep:ctor"]

[dev-dependencies]
anyhow = "1.0.75"
